--- a/lib/railsbricks/assets/views/admin/posts/dashboard.html.erb
+++ b/lib/railsbricks/assets/views/admin/posts/dashboard.html.erb
@@ -1,4 +1,4 @@
-<% title("Posts Dashboard") %>
+<% title(t('titles.posts_dashboard')) %>
 <h3 class="page-title">Posts <small>Dashboard</small></h3>
 <p><%= link_to "Back to Admin", admin_root_path %></p>
 <hr/>
