--- a/lib/railsbricks/assets/views/pages/contact.html.erb
+++ b/lib/railsbricks/assets/views/pages/contact.html.erb
@@ -1,5 +1,5 @@
-<% title("Contact") %>
-<h1 class="page-title">Contact</h1>
+<% title(t('titles.contact')) %>
+<h1 class="page-title"><%= t('titles.contact') %></h1>
 
 <div class="row">
   <div class="col-sm-6">
