--- a/lib/railsbricks/foundation/app/views/layouts/_footer.html.erb
+++ b/lib/railsbricks/foundation/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
         <p><small>
           &copy; <%= Time.now.year %> - Yourself!
           <br/>
-          Assembled with <%= link_to "RailsBricks", "http://www.railsbricks.net" %>
+          <%= t('assembled_with') %> <%= link_to "RailsBricks", "http://www.railsbricks.net" %>
         </small></p>
       </div>
 
