--- a/lib/railsbricks/foundation/app/views/pages/home.html.erb
+++ b/lib/railsbricks/foundation/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
-<% title("Home Page") %>
-<h1><i class="fa fa-home"></i> Home Page <small>views/pages/home.html.erb</small></h1>
+<% title("titles.homepage") %>
+<h1><i class="fa fa-home"></i> <%= t('home.home_page') %> <small>views/pages/home.html.erb</small></h1>
